--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,18 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "botman/botman": "^2.6",
+        "botman/driver-web": "^1.5",
+        "doctrine/annotations": "^1.13",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*"
-    },
-    "require-dev": {
+        "symfony/maker-bundle": "^1.31",
+        "symfony/twig-bundle": "5.2.*",
+        "symfony/yaml": "5.2.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "optimize-autoloader": true,
