--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    BotMan\BotMan\Cache\SymfonyCache:
+        arguments:
+            $adapter: '@cache.app'
