--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,6 +21,7 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
+            - '../src/ChatBot/Middleware/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
