--- a/.env
+++ b/.env
@@ -14,6 +14,6 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=f4be3b048d4edb8607ca49d63bd76ebe
 ###< symfony/framework-bundle ###
