--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,7 @@
         "symfony/var-dumper": "5.2.*",
         "symfony/yaml": "5.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "ext-gd": "*",
-        "ext-imagick": "*",
-        "ext-zip": "*"
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "optimize-autoloader": true,
