--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "openai-php/client": "^0.3.0",
         "orhanerday/open-ai": "^3.4",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "5.2.*",
         "symfony/cache": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
