--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     OPENAI_API_KEY: '%env(OPENAI_API_KEY)%'
     WEATHER_API_KEY: '%env(WEATHER_API_KEY)%'
     GIPHY_API_KEY: '%env(GIPHY_API_KEY)%'
+    YOUTUBE_API_KEY: '%env(YOUTUBE_API_KEY)%'
 
 services:
     # default configuration for services in *this* file
