--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,7 +2,7 @@
 # Files in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     OPENAI_API_KEY: '%env(OPENAI_API_KEY)%'
     WEATHER_API_KEY: '%env(WEATHER_API_KEY)%'
@@ -14,6 +14,16 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    # configure the Symfony Cache Component's FilesystemAdapter
+    Symfony\Component\Cache\Adapter\FilesystemAdapter:
+        arguments:
+            - 'botman_cache' # name of the cache pool
+            - 0 # default lifetime in seconds (0 = no expiration)
+            - '%kernel.cache_dir%/botman' # directory where cache files are stored
+    # configure the BotMan Symfony Cache
+    BotMan\BotMan\Cache\SymfonyCache:
+        arguments:
+            - '@Symfony\Component\Cache\Adapter\FilesystemAdapter'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -23,17 +33,6 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-            - '../src/Tests/'
-            - '../src/ChatBot/Middleware/'
-
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller/'
-        tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    BotMan\BotMan\Cache\SymfonyCache:
-        arguments:
-            $adapter: '@cache.app'
