composer.json update

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,8 @@
     "config": {
         "allow-plugins": {
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "php-http/discovery": true
         },
         "sort-packages": true
     },
