--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,7 @@ parameters:
     WEATHER_API_KEY: '%env(WEATHER_API_KEY)%'
     GIPHY_API_KEY: '%env(GIPHY_API_KEY)%'
     YOUTUBE_API_KEY: '%env(YOUTUBE_API_KEY)%'
+    GNEWS_API_KEY: '%env(GNEWS_API_KEY)%'
 
 services:
     # default configuration for services in *this* file
