--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "symfony/intl": "6.2.*",
         "symfony/mailer": "6.2.*",
         "symfony/mime": "6.2.*",
-        "symfony/monolog-bundle": "^3.0",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/notifier": "6.2.*",
         "symfony/process": "6.2.*",
         "symfony/property-access": "6.2.*",
@@ -46,6 +46,8 @@
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
         "symfony/yaml": "6.2.*",
+        "symfony/config": "6.2.*",
+        "symfony/cache": "6.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
