--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,13 +5,30 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        db_users:
+            entity:
+                class: App\Entity\AdminUser
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            lazy: true
-            provider: users_in_memory
+            provider: db_users
+            form_login:
+                login_path: app_admin_security_login
+                check_path: app_admin_security_login
+                default_target_path: chat_index
+                always_use_default_target_path: true
+                username_parameter: _username
+                password_parameter: _password
+                csrf_parameter: _csrf_token
+                csrf_token_id: authenticate
+            logout:
+                path: app_admin_security_logout
+                target: app_admin_security_login
+
+
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -24,6 +41,10 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login$, roles: PUBLIC_ACCESS  } # login url must be public
+        # - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/chat, roles: ROLE_ADMIN } # login url must be public
+
 
 when@test:
     security:
