--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,6 +25,11 @@ services:
     BotMan\BotMan\Cache\SymfonyCache:
         arguments:
             - '@Symfony\Component\Cache\Adapter\FilesystemAdapter'
+    # command for creating an admin
+    app.command.adminusercommand:
+        class: App\Command\CreateAdminUserCommand
+        tags:
+            -  { name: app:create:admin }
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
