login page before going on chatbot

--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,9 @@
         },
         "sort-packages": true
     },
+    "bin": [
+        "bin/console"
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "src/"
