--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=d8ff97b3440df32343482b0910e2da4d
 ###< symfony/framework-bundle ###
 
