--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,8 +26,7 @@ services:
         arguments:
             - '@Symfony\Component\Cache\Adapter\FilesystemAdapter'
     # command for creating an admin
-    app.command.adminusercommand:
-        class: App\Command\CreateAdminUserCommand
+    App\Command\CreateAdminUserCommand:
         tags:
             -  { name: app:create:admin }
 
