database url heroku

--- a/.env
+++ b/.env
@@ -30,7 +30,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-CLEARDB_DATABASE_URL="mysql://b2a802f2d6e04f:1700fee3@us-cdbr-east-06.cleardb.net/heroku_72fdbed2f6a26d3?reconnect=true"
+DATABASE_URL="mysql://b2a802f2d6e04f:1700fee3@us-cdbr-east-06.cleardb.net/heroku_72fdbed2f6a26d3?reconnect=true"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
