style main page responsive

--- a/.env
+++ b/.env
@@ -50,3 +50,4 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_AUTH_CONFIG=%kernel.project_dir%/path/to/file.json
 ###< google/apiclient ###
+APP_DEFAULT_LOCALE=fr
