--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "doctrine/orm": "^2.14",
         "google/apiclient": "^2.13",
         "illuminate/support": "^10.3",
+        "mozex/anthropic-php": "^1.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.16",
         "sensio/framework-extra-bundle": "^6.1",
@@ -48,7 +49,6 @@
         "symfony/validator": "6.2.*",
         "symfony/web-link": "6.2.*",
         "symfony/yaml": "6.2.*",
-        "tectalic/openai": "^1.4",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
