--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    OPENAI_API_KEY: '%env(OPENAI_API_KEY)%'
+    CLAUDE_API_KEY: '%env(CLAUDE_API_KEY)%'
     WEATHER_API_KEY: '%env(WEATHER_API_KEY)%'
     GIPHY_API_KEY: '%env(GIPHY_API_KEY)%'
     YOUTUBE_API_KEY: '%env(YOUTUBE_API_KEY)%'
